<resources>
    <string name="app_name">MeraBillAssignment</string>
    <string name="total_amount">Total Amount = \u20B9</string>
    <string name="add_payment"><u>Add Payment</u></string>
    <string name="save">Save</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="provider">Provider (ICICI, Citibank, etc.)</string>
    <string name="transaction_reference">Transaction Reference</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="payments">Payments</string>
    <string name="rupee_symbol">\u20B9</string>
    <string name="dialog_add_payment">Add Payment</string>
</resources>